--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
      "restart": "pm2 restart prabath"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "6.7.12",
+    "@whiskeysockets/baileys": "github:nstar-y/Bail",
     "qrcode": "^1.5.4",
     "awesome-phonenumber": "^7.5.0",
     "pino": "^9.7.0",
