--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
      "restart": "pm2 restart prabath"
     },
   "dependencies": {
-    "@whiskeysockets/baileys": "github:WaysModzz/baileys",
+    "@whiskeysockets/baileys": "npm:baileys-mod",
     "qrcode": "^1.5.4",
     "awesome-phonenumber": "^7.5.0",
     "pino": "^9.7.0",
